<resources>
    <string name="app_name">THHMusic</string>
    <string name="title_online">Online</string>
    <string name="title_offline">Cá nhân</string>
    <string name="title_allmusic">All Music</string>
    <string name="title_allaudio">All Audio</string>
    <string name="title_alternativerock">Alternativerock</string>
    <string name="title_ambient">Ambient</string>
    <string name="title_classical">Classical</string>
    <string name="title_country">Country</string>
    <string name="title_more">Thêm</string>
    <string name="title_allsong">All Song</string>
    <string name="title_album">Album</string>
    <string name="title_artist">Artis</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_search_hint">Nhập vào tên bài hát</string>
    <string name="msg_not_track_selected">Chưa có bài hát nào đượcc chọn</string>

</resources>
