<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_tudora">

            <TextView
                android:id="@+id/text_allmusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/title_allmusic"
                android:textColor="@color/color_whitle"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_allmusic"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_150"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_allmusic" />

            <TextView
                android:id="@+id/text_allaudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/title_allaudio"
                android:textColor="@color/color_whitle"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_allmusic" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_allaudio"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_150"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_allaudio" />

            <TextView
                android:id="@+id/text_alternativerock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/title_alternativerock"
                android:textColor="@color/color_whitle"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_allaudio" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_alternativerock"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_150"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_alternativerock" />

            <TextView
                android:id="@+id/text_ambient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/title_ambient"
                android:textColor="@color/color_whitle"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_alternativerock" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_ambient"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_150"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_ambient" />

            <TextView
                android:id="@+id/text_classical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/title_classical"
                android:textColor="@color/color_whitle"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_ambient" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_clasical"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_150"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_classical" />

            <TextView
                android:id="@+id/text_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/title_country"
                android:textColor="@color/color_whitle"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_clasical" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_country"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_150"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_country" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/color_whitle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>
